--- a/Frontend/Ecommerce/src/app/homepage/header/header.component.css
+++ b/Frontend/Ecommerce/src/app/homepage/header/header.component.css
@@ -61,6 +61,9 @@ color: black;
 .modal.showsellerlogin{
     display: block;
 }
+.modal.AddProductModal{
+    display: block;
+}
 .modal.sellerregistraion{
     display: block;
 }
