retreived product and showed it in product card

--- a/Frontend/Ecommerce/src/app/app.component.html
+++ b/Frontend/Ecommerce/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!-- <app-homepage></app-homepage> -->
-<router-outlet></router-outlet>
+<div class="homeDiv">
+
+    <router-outlet></router-outlet>
+</div>
  
