--- a/Frontend/Ecommerce/src/app/homepage/body/body.component.css
+++ b/Frontend/Ecommerce/src/app/homepage/body/body.component.css
@@ -7,3 +7,15 @@
     justify-content:space-evenly ; 
     flex-wrap: wrap; */
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container{
+    overflow-x: hidden;
+    overflow-y: hidden;
+    width: 100%; 
+}
