--- a/Frontend/Ecommerce/src/app/productcards/productcards.component.css
+++ b/Frontend/Ecommerce/src/app/productcards/productcards.component.css
@@ -6,6 +6,11 @@
     width: 70%;
  } */
  .product_card_row{
-    margin-right: 5%;
-    margin-left: 5%;
+    /* background-color: black; */
+    margin-right: 4%;
+    margin-left: 4%;
+ }
+ .card-img-top{
+    width:100%;
+    height:171px
  }
