RECTIFIED ERROR ON THE BACKEND(AT CART AREA FOREIGN KEY MIGRATION ERROR) & UPTO BUY BUTTON CLICK FINISHED & BEGINING OF CART

--- a/Frontend/Ecommerce/src/app/app.component.html
+++ b/Frontend/Ecommerce/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!-- <app-homepage></app-homepage> -->
-<div class="homeDiv">
 
-    <router-outlet></router-outlet>
-</div>
+<!-- <div class="homeDiv"> -->
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
+<!-- </div> -->
  
