--- a/Frontend/Ecommerce/src/app/productcards/productcards.component.html
+++ b/Frontend/Ecommerce/src/app/productcards/productcards.component.html
@@ -10,15 +10,18 @@
 
 
 <div class="row mt-5 product_card_row">
-  <div class="col-md-3" *ngFor="let listofcard of ProductList.slice(0, 4);">
+  <div class="col-md-3" *ngFor="let listofcard of ProductList.slice(0, 20);">
 
     <div class="card productCard">
       <img class="card-img-top" src="{{APIUrl+listofcard.PPhoto}}" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">{{listofcard.PName}}</h5>
         <p class="card-text">{{listofcard.PPrice}}</p>
-        <a href="#" class="btn btn-primary">Buy</a>
+         <!-- <a href="#" class="btn btn-primary" routerLink="BuyProduct/5"  >Buy</a> -->
+         <a href="#" class="btn btn-primary" [routerLink]="['BuyProduct',listofcard.ProductId ]"  >Buy</a>
+         <!-- <a href="#" class="btn btn-primary" (click)="viewSingleProductDetails(listofcard.ProductId)">Buy</a> -->
+
       </div>
     </div>
   </div>
-</div>
+</div> 
