Add to cart and view cart complete working on buy

--- a/Frontend/Ecommerce/src/app/productcards/productcards.component.html
+++ b/Frontend/Ecommerce/src/app/productcards/productcards.component.html
@@ -18,8 +18,8 @@
         <h5 class="card-title">{{listofcard.PName}}</h5>
         <p class="card-text">{{listofcard.PPrice}}</p>
          <!-- <a href="#" class="btn btn-primary" routerLink="BuyProduct/5"  >Buy</a> -->
-         <a href="#" class="btn btn-primary" [routerLink]="['BuyProduct',listofcard.ProductId ]"  >Buy</a>
-         <!-- <a href="#" class="btn btn-primary" (click)="viewSingleProductDetails(listofcard.ProductId)">Buy</a> -->
+         <a href="#" class="btn btn-primary" [routerLink]="['BuyProduct',listofcard.ProductId ]">Buy</a>
+         <!-- <a href="#" class="btn btn-primary" routerLink='BuyProduct'>Buy</a> -->
 
       </div>
     </div>
