--- a/Frontend/Ecommerce/src/app/buy-show-productdetails/buy-show-productdetails.component.html
+++ b/Frontend/Ecommerce/src/app/buy-show-productdetails/buy-show-productdetails.component.html
@@ -1,11 +1,13 @@
 <div class="container">
     
+
     <div class="details">
         
         <div class="productimage">
-            <img class="card-img-top" src= {{APIUrl+listofproduct.PPhoto}} alt="Card image cap">
+            <img class="card-img-top" src= {{APIUrl+listofproduct.PPhoto}} alt="Card image cap">  
+            <h1>{{listofproduct.ProductId}}</h1>
             <button class="btn btn-danger" (click)="addToCart()">ADD TO CART</button>
-            <button class="btn btn-success" (click)="BuyProduct()">BUY</button>
+            <button class="btn btn-success"  [routerLink]="['/Placeorder',listofproduct.ProductId ]">BUY</button>
         </div>
         
 
