Seller View orders and customer placeorder reworked,working on status change......

--- a/Frontend/Ecommerce/src/app/my-orders/my-orders.component.html
+++ b/Frontend/Ecommerce/src/app/my-orders/my-orders.component.html
@@ -2,7 +2,7 @@
     <tbody>
         <tr *ngFor="let data of Myorder">
             <td><img class="sellerimage" src={{APIUrl+data.ProductId.PPhoto}}></td>
-            <td>{{data.ProductId.PName}}{{data.ProductId.PDescription}}</td>
+            <td>{{data.ProductId.PName}}<br>{{data.ProductId.PDescription}}</td>
             
             <td><h5>Order Date:</h5>{{data.OrderDate}}</td>
             <td>{{data.OrderStatus}}</td>
